templates/disallow-latest-tag/disallow-latest-tag.yaml
{{- if .Values.policies.requireResourceLimits.enabled }}
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
  annotations:
    policies.kyverno.io/severity: {{ .Values.policies.disallowLatestPolicy.severity }}
    policies.kyverno.io/description: >-
      Disallow Pods to use images with latest Tag.
      To Enforce adoption of versioned Images.
spec:
  validationFailureAction: {{ .Values.policies.disallowLatestPolicy.action }}
  background: true
  rules:
    - name: validate-image-tag
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Using 'latest' tag is not allowed."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
{{ end }}
