templates/disallow-latest-tag/tests/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-fail
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pass
spec:
  containers:
    - name: nginx
      image: nginx:1.25
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-latest-argocd
  namespace: argocd
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-latest-kube-system
  namespace: kube-system
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-latest-kyverno-policies
  namespace: kyverno-policies
spec:
  containers:
    - name: nginx
      image: nginx:latest
