templates/disallow-latest-tag/tests/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-latest-tag-test

policies:
  - ../disallow-latest-tag.yaml

resources:
  - resources.yaml

results:
  - policy: disallow-latest-tag
    rule: validate-image-tag
    resources:
      - nginx-pass
    kind: Pod
    result: pass

  - policy: disallow-latest-tag
    rule: validate-image-tag
    resources:
      - nginx-fail
    kind: Pod
    result: fail

  - policy: disallow-latest-tag
    rule: validate-image-tag
    resources:
      - nginx-latest-argocd
      - nginx-latest-kube-system
      - nginx-latest-kyverno-policies
    kind: Pod
    result: skip
